update web page

--- a/assets/scss/shared/_bootstrap.scss
+++ b/assets/scss/shared/_bootstrap.scss
@@ -7,10 +7,14 @@
 
 $font-family-base: "Inter", sans-serif;
 
-$primary: #7C76BB;
-$secondary: #27A3FF29;
-$danger: #FF87B0;
-$light: #FFFFFF;
+$primary: #f3c37cff;//#f6e22d;//#f6ae2d;
+$secondary: #BA5046; //#ba5046
+$success: #7eae46;
+$info: #2a3a43;
+$warning: #fc9e0e;
+$danger: #f44336;
+$light: #f0f5f2;
+$dark: #2B3545;
 
 // scss-docs-start import-stack
 // Configuration
