--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   {{ partial "head/head.html" . }}
-  <body>
+  <body class="bg-dark">
     {{- partial "shared/header.html" . -}}
     {{- block "main" . -}}{{- end -}}
     {{- partial "shared/footer.html" . -}}
