--- a/layouts/partials/sections/portfolio.html
+++ b/layouts/partials/sections/portfolio.html
@@ -15,7 +15,7 @@
           <h3 class="fs-1 fw-bold text-primary pb-3">{{ . }}</h3>
         {{ end }}
         {{ with .text }}
-          <p class="text-black-61 pb-3">{{ . }}</p>
+          <p class="text-light pb-3">{{ . }}</p>
         {{ end }}
         <div class="">
           {{ range .buttons }}
