--- a/layouts/partials/shared/header.html
+++ b/layouts/partials/shared/header.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-xl navbar-light bg-light py-4">
+<nav class="navbar navbar-expand-xl navbar-dark bg-blue-16 py-4">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="{{ .Site.BaseURL }}">
       {{ partial "utilities/image.html" "images/logo.png" }}
-      <span class="ms-3 fs-3 fw-semibold text-primary">{{ .Site.Title }}</span>
+      <span class="ms-3 fs-3 fw-semibold text-white">{{ .Site.Title }}</span>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -11,14 +11,14 @@
       <ul class="navbar-nav ms-auto mb-2 mb-xl-0">
         {{ range .Site.Menus.main }}
           <li class="nav-item text-center">
-            <a class="nav-link text-primary px-4" href="{{ .URL }}">{{ .Name }}</a>
+            <a class="nav-link text-light px-4 fw-bold" href="{{ .URL }}">{{ .Name }}</a>
           </li>
         {{ end }}
       </ul>
       <ul class="navbar-nav ms-xl-3 mb-2 mb-xl-0">
         {{ range .Site.Menus.buttons }}
           <li class="nav-item">
-            <a class="nav-link btn btn-primary text-light px-4" href="{{ .URL }}">{{ .Name }}</a>
+            <a class="nav-link btn btn-primary text-light px-4 fw-bold" href="{{ .URL }}" target="_blank">{{ .Name }}</a>
           </li>
         {{ end }}
       </ul>
