--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -7,7 +7,7 @@
             <h2 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h2>
           {{ end }}
           {{ with .Params.description }}
-            <p class="text-black-61 text-center pb-3">{{ . }}</p>
+            <p class="text-light text-center pb-3">{{ . }}</p>
           {{ end }}
         </div>
       </div>
@@ -22,7 +22,7 @@
             </div>
             <div class="card-body">
               <h5 class="card-title fw-semibold">{{ .Title }}</h5>
-              <p class="card-text text-black-61">{{ .Summary | plainify }}</p>
+              <p class="card-text text-light">{{ .Summary | plainify }}</p>
             </div>
           </a>
         </div>
