--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,12 +7,12 @@
             <h2 class="display-1 fw-bold text-center text-primary pb-3">{{ . }}</h2>
           {{ end }}
           {{ with .Params.description }}
-            <p class="text-black-61 text-center pb-3">{{ . }}</p>
+            <p class="text-light text-center pb-3">{{ . }}</p>
           {{ end }}
         </div>
       </div>
       <div class="row pb-5">
-        <div class="col-12 d-flex justify-content-center">
+        <div class="col-12 d-flex justify-content-center text-white">
           <div class="blog-content fs-5">
             {{ .Content }}
           </div>
