--- a/layouts/partials/sections/testimonials.html
+++ b/layouts/partials/sections/testimonials.html
@@ -16,9 +16,9 @@
       </div>
       <div class="col-12 col-xl-7 d-flex flex-column justify-content-center">
         <div class="pb-4">{{ partial "utilities/image-third.html" "images/testimonials-left-quote.png" }}</div>
-        <div class="card d-flex flex-row align-items-start border-0 shadow p-5">
+        <div class="card d-flex flex-row align-items-start border-0 shadow p-5 bg-blue-16">
           <div class="bg-green rounded-circle size-64 me-4"></div>
-          <p class="card-text text-black-61">"{{ .text }}" <span class="fw-bold text-primary text-nowrap">- {{ .client }}</span></p>
+          <p class="card-text text-light">"{{ .text }}" <span class="fw-bold text-primary text-nowrap">- {{ .client }}</span></p>
         </div>
         <div class="pt-4 text-end">{{ partial "utilities/image-third.html" "images/testimonials-right-quote.png" }}</div>
       </div>
@@ -27,17 +27,17 @@
     <div class="row">
       {{ range $i, $e := .content.list }}
         <div class="col-12 col-xl-4">
-          <div class="card border-0 border-radius-34 p-4">
+          <div class="card border-0 border-radius-34 bg-blue-63 p-4">
             {{ with $e.image }}
               {{ partial "utilities/image-fluid.html" $e.image }}
               <div class="card-body">
-                <p class="card-text text-black-61">"{{ $e.text }}" <span class="fw-bold text-primary text-nowrap">- {{ $e.client }}</span></p>
+                <p class="card-text text-light">"{{ $e.text }}" <span class="fw-bold text-primary text-nowrap">- {{ $e.client }}</span></p>
               </div>
             {{ else }}
               <div class="card-body">
                 {{ $colors := (slice "bg-green" "bg-yellow" "bg-red" "bg-purple") }}
                 <div class="{{ index $colors (mod $i 4) }} rounded-circle size-90 mb-4"></div>
-                <p class="card-text text-black-61">"{{ $e.text }}" <span class="fw-bold text-primary text-nowrap">- {{ $e.client }}</span></p>
+                <p class="card-text text-light">"{{ $e.text }}" <span class="fw-bold text-primary text-nowrap">- {{ $e.client }}</span></p>
               </div>
             {{ end }}
           </div>
