--- a/layouts/partials/utilities/image-fluid.html
+++ b/layouts/partials/utilities/image-fluid.html
@@ -1,3 +1,3 @@
 {{ with resources.Get . }}
-  <img class="img-fluid" src="{{ .Permalink }}" alt="{{ .Title }}" width="{{ .Width }}" height="{{ .Height }}">
+  <img class="img-fluid rounded-pill" src="{{ .Permalink }}" alt="{{ .Title }}" width="{{ .Width }}" height="{{ .Height }}">
 {{ end }}
